--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build: .
     ports: 
       - "3000:3000"
-  database:
+    depends_on: 
+      - db
+  db:
     image: "postgres:latest"
