--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       - "3000:3000"
     depends_on: 
       - db
+    environment:
+      DATABASE_URL: postgres://postgres@db
   db:
     image: "postgres:latest"
